@@ -1,12 +1,17 @@
 language: python
 
 python:
+  - 3.7
   - 3.6
   - 3.5
   - 3.4
   - 2.7
 
 sudo: false
+
+services:
+  - mysql
+  - postgresql
 
 addons:
   apt:
@@ -17,7 +22,6 @@ cache:
   directories:
     - node_modules
     - $HOME/.pip/cache
-
 
 env:
   global:
@@ -69,6 +73,10 @@ matrix:
       env: DJANGO=2.0 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='emailuserapp.EmailUser'
     - python: 3.6
       env: DJANGO=2.0 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
+    - python: 3.7
+      env: DJANGO=2.0 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
+      dist: xenial
+      sudo: true
 
     # DJANGO 2.1
     - python: 3.5
@@ -83,6 +91,10 @@ matrix:
       env: DJANGO=2.1 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
     - python: 3.6
       env: TEST_DOCS=1 DJANGO=2.1 DATABASE_URL='sqlite://localhost/:memory:'
+    - python: 3.7
+      env: DJANGO=2.1 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
+      dist: xenial
+      sudo: true
 
     # DJANGO 2.2
     - python: 3.5
@@ -101,6 +113,10 @@ matrix:
       env: TEST_DOCS=1 DJANGO=2.2 DATABASE_URL='sqlite://localhost/:memory:'
       dist: xenial
       sudo: true
+    - python: 3.7
+      env: DJANGO=2.2 DATABASE_URL='postgres://postgres@127.0.0.1/djangocms_test' AUTH_USER_MODEL='customuserapp.User'
+      dist: xenial
+      sudo: true
   allow_failures:
     - python: 2.7
       env: DJANGO=1.11 DATABASE_URL='sqlite://localhost/:memory:'
@@ -109,6 +125,7 @@ matrix:
     - python: 3.4
     - python: 3.5
     - python: 3.6
+    - python: 3.7
   fast_finish: true
 
 before_script:
